fix table overlap issue in Struts UI

--- a/FlashCards_Struts/src/main/webapp/styles/style.css
+++ b/FlashCards_Struts/src/main/webapp/styles/style.css
@@ -116,7 +116,7 @@ text-align: center;
 
 table {
 	border-collapse: collapse;
-	width: 90%;
+	width: 100%;
 	margin-left: 1px;
 	margin-right: 1px;
 	margin-bottom: 24px;
